# AlphaBot

./: .env  .env.base  .gitignore  README.md  aha.json  docker-compose.yml  prosody.yaml  run_remote.sh
alphabot_agent/: Dockerfile  __main__.py  config.json  pyproject.toml
alphabot_agent/alphabotlib/: AlphaBot2.py  Pathfinding.py  TRSensors.py  test.py
alphabot_agent/calibs/: Logitec_ceiling_1920-1080_0.npz  Logitec_ceiling_854-480_0.npz
calibration_agent/: Dockerfile  calibration_agent.py
camera_agent/: Dockerfile  camera_agent.py  pyproject.toml
env/: prosody.env
mosquitto/client/: Dockerfile  gate_handler.py  pyproject.toml
prosody/: prosody.cfg.lua
prosody/api/: index.js  package.json
robot_arm_agent/: Dockerfile  __main__.py  pyproject.toml  robot_arm_agent.py
robot_arm_agent/urbasic/: setup.py
robot_arm_agent/urbasic/URBasic/: kinematic.py
robot_arm_agent/urbasic/URBasic.egg-info/: PKG-INFO  SOURCES.txt
runner_agent/: Dockerfile  __main__.py  alphabot_controller.py  calibration_sender.py  image_tester.py  pyproject.toml  runner.py  scan_command_agent.py  scan_command_sender.py
runner_agent/commands/: command.json  command_maze.json
