[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp==3.10.5",
    "aioxmpp>=0.13.3",
    "cryptography>=43.0.1",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "spade==3.3.3",
]