[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "scipy>=1.15.2",
    "setuptools>=80.3.1",
    "spade==3.3.3",
    "urbasic",
]

[tool.uv.sources]
urbasic = { path = "urbasic" }
