[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "scipy>=1.15.2",
    "spade==3.3.3",
    "urbasic",
]

[tool.uv.sources]
urbasic = { git = "https://github.com/6figuress/ur3e-control.git" }
